# Cafe-Control-Service

./: .dockerignore  .env-example  .gitignore  .railwayignore  Dockerfile  Dockerfile.UV  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml  deploy_railway.yml
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/cafe_app/: forms.py  urls.py  views.py
app/cafe_app/templatetags/: custom_filters.py
app/cafe_control/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
app/cafe_control/migrations/: 0001_initial.py  0002_alter_orderitem_unique_together.py
app/static/js/: update_order_content.js  update_orders_content.js
app/templates/cafe_app/: alerts.html  create_order.html  delete_order.html  index.html  order_detail.html  order_template.html  orders.html  orders_template.html  search-orders.html  topbar.html
